--- a/src/sass/components/header.sass
+++ b/src/sass/components/header.sass
@@ -1,6 +1,6 @@
 .header
     margin-bottom: 100px
-    background: $gradientBg, $gradientStart url(../img/bg_header.jpg) no-repeat
+    background: $gradientBg, $gradientStart url(../img/bg_header.png) no-repeat
     background-size: cover
     background-position: center
     +media(320)
@@ -11,7 +11,7 @@
         padding: 180px 0
 .menu-line
     &__logo
-        width: 240px
+        width: 245px
         font-size: 30px
         letter-spacing: 6rem
         color: $textLight
