--- a/src/pug/components/main.pug
+++ b/src/pug/components/main.pug
@@ -7,7 +7,7 @@ main.main#main
         .useful-thinks 
             +card('0', '#card_img_one')
             +card('29', '#card_img_two')
-            +card('49', '#card_img_tree', 'tree-card')
+            +card('49', '#card_img_tree')
     .main-picture 
         .section-content
             p.main-section-content__promo SOCIAL MARKETING &#38; ANALYTICS
