--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -30,9 +30,9 @@ a
     flex-wrap: wrap
 
 .wrapper
-    padding: 0 10px
     margin: 0 auto
     width: 95%
+    box-sizing: border-box
     margin: auto
 
 @import  components/header
